--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
             margin: 0;
             padding: 0;
             background-color: #f7f7f7;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         h1 {
             text-align: center;
             color: #333;
+            margin-top: 0;
+            padding-bottom: 20px;
         }
 
         ul {
@@ -22,10 +26,15 @@
             padding: 0;
             margin: 0;
             text-align: center;
+            padding: 10;
         }
 
         li {
             margin-bottom: 10px;
+            padding: 10px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         a {
